# concept-drift-detection

./: README.md  pyproject.toml
examples/: synthetic_shift.py
src/: stream.py  visualize.py
src/detectors/: __init__.py  ks_window.py
tests/: test_ks_detector.py
