[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concept-drift-detection"
version = "0.1.0"
description = "Rolling-window KS-test concept drift detector with synthetic streaming demos."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.1.0",
  "black>=23.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
